--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,25 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./sass/main.scss" />
     <title></title>
   </head>
 
   <body>
     <load ="partials/header.html" />
-      
+    <load ="partials/hero.html" />
+    <load ="partials/luxury.html" />
+    <load ="partials/reviews.html" />
+    <load ="partials/faq.html" />
+    <load ="partials/bose-nc.html" />
+    <load ="partials/feedback.html" />
+    <load ="partials/footer.html" />
     
     <script src="./index.js" type="module"></script>
   </body>
