--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
     <load ="partials/header.html" />
     <load ="partials/hero.html" />
     <load ="partials/luxury.html" />
+    <load ="partials/bose-ar.html" />
+    <load ="partials/guarantees.html" />
+    <load ="partials/history.html" />
     <load ="partials/reviews.html" />
     <load ="partials/faq.html" />
     <load ="partials/bose-nc.html" />
