--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
   <body>
     <load ="partials/header.html" />
     <load ="partials/hero.html" />
+    <load ="partials/premium.html" />
+    <load ="partials/capable.html" />
     <load ="partials/luxury.html" />
     <load ="partials/bose-ar.html" />
     <load ="partials/guarantees.html" />
