--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
     <load ="partials/bose-nc.html" />
     <load ="partials/feedback.html" />
     <load ="partials/footer.html" />
+    <load ="partials/menu.html" />
     
     <script src="./index.js" type="module"></script>
   </body>
